--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "aws-sdk": "^2.3.14",
     "browserify": "^13.0.1",
     "gulp": "^3.9.1",
+    "gulp-batch": "^1.0.5",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.3",
+    "gulp-watch": "^4.3.6",
     "proxy-agent": "^2.0.0",
     "vinyl-source-stream": "^1.1.0"
   }
