--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "browserify": "^13.0.1",
     "gulp": "^3.9.1",
     "gulp-batch": "^1.0.5",
+    "gulp-gzip": "^1.4.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.3",
     "gulp-watch": "^4.3.6",
